--- a/style.css
+++ b/style.css
@@ -1,12 +1,26 @@
+/*
 body {
 background-image: url(Coffee.jpg);
 background-repeat: no-repeat;
 background-position: center center;
 background-attachment: fixed;
 background-size: cover;
+} */
+
+body {
+  background:url(Coffee.jpg) 
+  no-repeat center center fixed;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size:cover;
 }
 
-h1 {
+html{
+  display: block;
+}
+
+  h1 {
 	display: flex;
     color: lavender;
     padding: 1em;
@@ -15,7 +29,7 @@ h1 {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
-}
+  }
 
 h1 {
 	font-family: 'Courgette', cursive;
